RESOLVED FIXED104099
[v8] Fix hidden property name of V8ArrayBufferView flag.
https://bugs.webkit.org/show_bug.cgi?id=104099
Summary [v8] Fix hidden property name of V8ArrayBufferView flag.
Ulan Degenbaev
Reported 2012-12-05 01:22:13 PST
Instead of appending random characters to the name like "TypedArray::FastSet::8NkZVq" we should use http://trac.webkit.org/browser/trunk/Source/WebCore/bindings/v8/V8HiddenPropertyName.h to avoid name collisions.
Attachments
Patch (2.95 KB, patch)
2012-12-05 03:52 PST, Ulan Degenbaev
no flags
Patch (3.03 KB, patch)
2012-12-06 00:59 PST, Ulan Degenbaev
no flags
Patch (2.99 KB, patch)
2012-12-06 01:25 PST, Ulan Degenbaev
no flags
Ulan Degenbaev
Comment 1 2012-12-05 03:52:33 PST
Kenneth Russell
Comment 2 2012-12-05 12:51:55 PST
Comment on attachment 177719 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=177719&action=review Thanks for the patch and sorry for not knowing about V8HiddenPropertyName. Could you please rebase the patch? > Source/WebCore/bindings/v8/V8HiddenPropertyName.h:53 > + V(typedArrayFastSetFlag) Should this be named something like typedArrayHiddenCopyMethod?
Adam Barth
Comment 3 2012-12-05 18:36:58 PST
*** Bug 104192 has been marked as a duplicate of this bug. ***
Ulan Degenbaev
Comment 4 2012-12-06 00:59:38 PST
Kentaro Hara
Comment 5 2012-12-06 01:00:36 PST
Comment on attachment 177965 [details] Patch LGTM. Thanks for the fix!
Ulan Degenbaev
Comment 6 2012-12-06 01:01:40 PST
> Should this be named something like typedArrayHiddenCopyMethod? Yes, thanks for catching this. I did the change based on the old patch. > Could you please rebase the patch? Done.
Ulan Degenbaev
Comment 7 2012-12-06 01:03:36 PST
This was fast review. Thank you, Kentaro!
WebKit Review Bot
Comment 8 2012-12-06 01:06:49 PST
Comment on attachment 177965 [details] Patch Rejecting attachment 177965 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: ing file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/bindings/v8/V8HiddenPropertyName.h Hunk #1 FAILED at 49. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebCore/bindings/v8/V8HiddenPropertyName.h.rej patching file Source/WebCore/bindings/v8/custom/V8ArrayBufferViewCustom.cpp Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--force', u'--reviewer', u'Kentaro Ha..." exit_code: 1 cwd: /mnt/git/webkit-commit-queue Full output: http://queues.webkit.org/results/15159623
Kentaro Hara
Comment 9 2012-12-06 01:07:37 PST
Looks like you need to rebase it once again.
Ulan Degenbaev
Comment 10 2012-12-06 01:25:11 PST
WebKit Review Bot
Comment 11 2012-12-06 01:50:04 PST
Comment on attachment 177967 [details] Patch Clearing flags on attachment: 177967 Committed r136824: <http://trac.webkit.org/changeset/136824>
WebKit Review Bot
Comment 12 2012-12-06 01:50:08 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.