[v8] Fix hidden property name of V8ArrayBufferView flag. https://bugs.webkit.org/show_bug.cgi?id=104099

Patch by Ulan Degenbaev <ulan@chromium.org> on 2012-12-06
Reviewed by Kentaro Hara.

Fix hidden property name of V8ArrayBufferView hidden copy method.

* bindings/v8/V8HiddenPropertyName.h:
(WebCore):
* bindings/v8/custom/V8ArrayBufferViewCustom.cpp:
(WebCore::getHiddenCopyMethod):
(WebCore::installHiddenCopyMethod):

Canonical link: https://commits.webkit.org/122401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136824 268f45cc-cd09-0410-ab3c-d52691b4dbfc