Source/WebCore/bindings/v8/V8HiddenPropertyName.h
@@ -45,7 +45,8 @@ namespace WebCore {
     V(scriptState) \
     V(sleepFunction) \
     V(state) \
-    V(toStringString)
+    V(toStringString) \
+    V(typedArrayHiddenCopyMethod)
 
     enum V8HiddenPropertyCreationType { NewSymbol, NewString };
 
