Source/WebCore/bindings/v8/custom/V8ArrayBufferViewCustom.cpp
@@ -26,19 +26,16 @@
 #include "V8ArrayBufferViewCustom.h"
 
 #include "V8ArrayBufferViewCustomScript.h"
+#include "V8HiddenPropertyName.h"
 
 #include <v8.h>
 
 
 namespace WebCore {
 
-// The random suffix helps to avoid name collision.
-const char hiddenCopyMethodName[] = "TypedArray::HiddenCopy::8NkZVq";
-
 v8::Handle<v8::Value> getHiddenCopyMethod(v8::Handle<v8::Object> prototype)
 {
-    v8::Handle<v8::String> key = v8::String::NewSymbol(hiddenCopyMethodName);
-    return prototype->GetHiddenValue(key);
+    return prototype->GetHiddenValue(V8HiddenPropertyName::typedArrayHiddenCopyMethod());
 }
 
 v8::Handle<v8::Value> installHiddenCopyMethod(v8::Handle<v8::Object> prototype, v8::Isolate* isolate)
@@ -49,8 +46,7 @@ v8::Handle<v8::Value> installHiddenCopyMethod(v8::Handle<v8::Object> prototype, 
                   sizeof(V8ArrayBufferViewCustomScript_js));
     v8::Handle<v8::Script> script = v8::Script::Compile(v8String(source, isolate));
     v8::Handle<v8::Value> value = script->Run();
-    v8::Handle<v8::String> key = v8::String::NewSymbol(hiddenCopyMethodName);
-    prototype->SetHiddenValue(key, value);
+    prototype->SetHiddenValue(V8HiddenPropertyName::typedArrayHiddenCopyMethod(), value);
     return value;
 }
 
